--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.5.2",
+    "axios": "^0.24.0",
     "expo": "~43.0.0",
+    "expo-dev-client": "~0.6.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.18.1",
     "react-native": "0.64.2",
+    "react-native-date-picker": "^4.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
