--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-date-picker": "^4.1.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-native-webview": "^11.14.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
